# bevy_canvas

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: showoff.rs  showoff_usage.txt  uwu.rs
src/: canvas.rs  common_shapes.rs  lib.rs  path.rs
src/render/: mod.rs  shader.frag  shader.vert  types.rs
