[package]
authors = ["Federico Rinaldi <gisquerin@gmail.com>"]
edition = "2018"
name = "bevy_canvas"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = ["render"]}
tess = {package = "lyon_tessellation", version = "0.17"}

[dev-dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", branch = "main"}
