[package]
authors = ["Federico Rinaldi <gisquerin@gmail.com>"]
description = "An immediate mode 2D drawing API for Bevy game engine."
edition = "2018"
license = "MIT"
name = "bevy_canvas"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.5", default-features = false, features = ["render"]}
tess = {package = "lyon_tessellation", version = "0.17"}

[dev-dependencies]
bevy = {version = "0.5"}
